--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.4",
+    "styled-components": "^4.1.3",
     "typescript": "3.3.3"
   },
   "scripts": {
