--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@types/node": "10.12.24",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.3",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.4",
@@ -18,6 +20,16 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "husky": {
+    "husky": {
+      "hooks": {
+        "pre-commit": "lint-staged"
+      }
+    },
+    "lint-staged": {
+      "*.{js,json,css,md, tsx}": ["prettier --write", "git add"]
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
