--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "airbnb"
+  "extends": ["airbnb"],
+  "parser": "typescript-eslint-parser",
+  "plugins": ["typescript"],
+  "rules": {
+    "typescript/rule-name": "error"
+  }
 }
