--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "jest-dom": "^3.1.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.4",
     "react-testing-library": "^5.6.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^4.1.3",
     "typescript": "3.3.3"
   },
