--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-redux": "^7.0.1",
     "jest-dom": "^3.1.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
