[config] rimossa rule in eslintrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,5 @@
 {
   "extends": ["airbnb"],
   "parser": "typescript-eslint-parser",
-  "plugins": ["typescript"],
-  "rules": {
-    "typescript/rule-name": "error"
-  }
+  "plugins": ["typescript"]
 }
