--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "hygen": "^2.1.2",
     "jest-dom": "^3.1.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
@@ -18,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "new-component": "hygen component new"
   },
   "husky": {
     "hooks": {
