--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-redux": "^7.0.1",
+    "@types/styled-components": "^4.1.8",
     "hygen": "^2.1.2",
     "jest-dom": "^3.1.1",
     "react": "^16.8.1",
